--- a/manifest.json
+++ b/manifest.json
@@ -1,31 +1,15 @@
 {
-  "name": "Background Colour Change",
-  "description": "Build an Extension!",
+  "name": "Quotes",
+  "description": "Gives a new quote every day!",
   "version": "1.0",
   "manifest_version": 3,
-  "background": {
-    "service_worker": "background.js"
-    
-  },
-  "permissions": ["storage", "activeTab", "scripting"],
-  "options_page" : "options.html",
-  "action": {
-    "default_popup": "popup.html",
-    
-    "default_icon": {
-      "16": "/images/get_started16.png",
-      "32": "/images/get_started32.png",
-      "48": "/images/get_started48.png",
-      "128": "/images/get_started128.png"
-    
-    }
-  },
 
-  "icons": {
-    "16": "/images/get_started16.png",
-    "32": "/images/get_started32.png",
-    "48": "/images/get_started48.png",
-    "128": "/images/get_started128.png"
-  }
+  "action": {
+    "default_icon": "icon.png",
+    "default_popup": "popup.html"
+},
+  
+
+  "permissions": ["storage","activeTab", "alarms","notifications"]
   
 }
